# obs-websocket

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  PROTOCOL.md  Utils.cpp  Utils.h  WSEvents.cpp  WSEvents.h  WSRequestHandler.cpp  WSRequestHandler.h  WSServer.cpp  WSServer.h  obs-websocket.cpp  obs-websocket.h
data/locale/: en-US.ini
forms/: settings-dialog.cpp  settings-dialog.h  settings-dialog.ui
src/: Config.cpp  Config.h  Utils.cpp  Utils.h  WSEvents.cpp  WSRequestHandler.cpp  WSRequestHandler.h  WSRequestHandler_Profiles.cpp  WSRequestHandler_SceneCollections.cpp  WSRequestHandler_SceneItems.cpp  WSRequestHandler_Wamp.cpp  WSRequestHandler_WebSockets.cpp  WSServer.cpp  WSServer.h  obs-websocket.cpp
src/forms/: settings-dialog.cpp  settings-dialog.h
